--- a/content/page/about.mdx
+++ b/content/page/about.mdx
@@ -1,1 +1,41 @@
-This in an "about" page.
+
+# About
+
+WXYC 89.3 FM is the non-commercial student-run radio station of the University of North Carolina at Chapel Hill. We broadcast at 1100 watts from the student union on the UNC campus, 24 hours a day, 365 days a year. Our coverage area encompasses approximately 900 square miles in and around Chapel Hill, Durham, Pittsboro, Apex, and parts of Raleigh.
+
+In November 1994, WXYC became [the first radio station in the world](https://wxyc.org/about/about/simulcast/) to rebroadcast its signal over the Internet.
+
+We celebrated our 40th anniversary in March 2017. We’re proud to be in our fifth decade of nationally-recognized innovative programming and strong support for independent and local artists and labels.
+
+[FCC public information for WXYC radio](https://publicfiles.fcc.gov/fm-profile/wxyc/)
+
+# Staff
+
+The station is staffed by approximately 150 UNC students and alumni who perform both on-air DJ shifts and administrative functions. Only current students are hired as DJs, but once hired DJs are permitted to remain on-staff indefinitely. The staff is about two-thirds current students and one-third alumni. [Click here](https://wxyc.org/dj-schedule/) for our current DJ schedule.
+
+WXYC hires new DJs each fall, spring and summer semester. For more information about becoming a WXYC DJ, see the [FAQ](https://wxyc.org/contact-2/).
+
+# Structure
+
+WXYC is an officially-recognized student organization of UNC-Chapel Hill. Our license is held by Student Educational Broadcasting Inc. (SEB), a non-profit formed in 1977 to serve as the official owner of the station. SEB was established because the FCC rejected UNC Student Government as the proposed license holder. SEB serves as the station’s board of directors and includes representatives from student government, students at large, the Chapel Hill-Carrboro community, UNC faculty and WXYC staff. The board, which meets monthly, oversees major expenses and overarching station issues. The current chair is Bill Burton, an attorney and former WXYC station manager.
+
+The station’s day-to-day operations are managed by a station manager and business manager that are elected by SEB each April. The business manager is required to be a current UNC student; although the station manager position does not have the same requirement, the station manager is nonetheless almost always a student.
+
+The station manager selects a group to serve as the management staff and also has the power to select the music director. Currently, the management staff consists of a team of five to eight individuals, including students and recent alumni. The management staff oversees the station’s day-to-day operations, including hiring, training, scheduling, promotions, record-keeping, fundraising and a variety of other duties.
+
+The music department consists of the music director and a staff that he/she selects. This group is responsible for reviewing new music and choosing which releases are placed in the playbox. For more information about the department’s duties, see the [Playlist](https://wxyc.org/listen/playlist/) section.
+
+For current managers and contact information, see the [contact page](https://wxyc.org/contact-2/).
+
+# Funding
+
+WXYC, one of three student organizations whose funding is guaranteed by the student government’s constitution, is funded by the Student Activity Fee paid each semester by UNC students. We supplement those funds with t-shirt sales and fundraising events such as our biannual 2000s Dance. We do not currently accept advertising or underwriting.
+
+WXYC uses its funding to pay licensing and copyright fees, to purchase and repair equipment, to expand our music library, to cover administrative costs and for station promotions. All WXYC staff members are volunteers except for the station manager, business manager and our professional part-time engineer, who each receive nominal monthly salaries.
+
+# Awards
+
+\* Gavin magazine’s College Radio Station of the Year, 1995
+\* The Independent Weekly’s Real Best of the Triangle, Best Radio Station for Local Music, 1997
+\* The Independent Weekly’s Indies Arts Award, 1998
+\* Spectator magazine’s Best of the Triangle, critic’s choice for Most Cutting-Edge Radio Station, 2002
