--- a/content/page/about.mdx
+++ b/content/page/about.mdx
@@ -9,13 +9,13 @@ We celebrated our 40th anniversary in March 2017. We’re proud to be in our fif
 
 [FCC public information for WXYC radio](https://publicfiles.fcc.gov/fm-profile/wxyc/)
 
-# Staff
+### Staff
 
 The station is staffed by approximately 150 UNC students and alumni who perform both on-air DJ shifts and administrative functions. Only current students are hired as DJs, but once hired DJs are permitted to remain on-staff indefinitely. The staff is about two-thirds current students and one-third alumni. [Click here](https://wxyc.org/dj-schedule/) for our current DJ schedule.
 
 WXYC hires new DJs each fall, spring and summer semester. For more information about becoming a WXYC DJ, see the [FAQ](https://wxyc.org/contact-2/).
 
-# Structure
+### Structure
 
 WXYC is an officially-recognized student organization of UNC-Chapel Hill. Our license is held by Student Educational Broadcasting Inc. (SEB), a non-profit formed in 1977 to serve as the official owner of the station. SEB was established because the FCC rejected UNC Student Government as the proposed license holder. SEB serves as the station’s board of directors and includes representatives from student government, students at large, the Chapel Hill-Carrboro community, UNC faculty and WXYC staff. The board, which meets monthly, oversees major expenses and overarching station issues. The current chair is Bill Burton, an attorney and former WXYC station manager.
 
@@ -27,15 +27,37 @@ The music department consists of the music director and a staff that he/she sele
 
 For current managers and contact information, see the [contact page](https://wxyc.org/contact-2/).
 
-# Funding
+### Funding
 
 WXYC, one of three student organizations whose funding is guaranteed by the student government’s constitution, is funded by the Student Activity Fee paid each semester by UNC students. We supplement those funds with t-shirt sales and fundraising events such as our biannual 2000s Dance. We do not currently accept advertising or underwriting.
 
 WXYC uses its funding to pay licensing and copyright fees, to purchase and repair equipment, to expand our music library, to cover administrative costs and for station promotions. All WXYC staff members are volunteers except for the station manager, business manager and our professional part-time engineer, who each receive nominal monthly salaries.
 
-# Awards
+### Awards
 
 \* Gavin magazine’s College Radio Station of the Year, 1995
 \* The Independent Weekly’s Real Best of the Triangle, Best Radio Station for Local Music, 1997
 \* The Independent Weekly’s Indies Arts Award, 1998
 \* Spectator magazine’s Best of the Triangle, critic’s choice for Most Cutting-Edge Radio Station, 2002
+
+# History
+
+WXYC went on the air on March 17, 1977 with Joni Mitchell’s “You Turn Me on I’m a Radio.”
+
+WXYC was preceded by WCAR, a carrier current station that reached dorms on the UNC-Chapel Hill campus through electrical wiring. The station’s alumni include top 40 radio host Rick Dees.
+
+When WCAR wanted to upgrade in the early 1970s, it decided to pursue an FM license and begin broadcastin over the air rather than update the carrier current system. Funding for the change to FM was provided by a student referendum passed in 1973. The physical conversion cost $35,000 and took two years to complete.
+
+The non-profit Student Educational Broadcasting, Inc. was established to serve as the official owner of WXYC’s broadcast license, and in 1977 WCAR became WXYC. The station was originally scheduled to begin broadcasting in January 1977, but winter freezes prevented the installation of an antenna on UNC’s water tower delaying the broadcast until March.
+
+From its earliest days in the late 70s, WXYC has been a leader in diverse and interesting programming, adopting changing forms of popular music long before they became popular in the mainstream without losing touch with the past. This coalesced in 1980 with the decision to achieve a delicate balance, avoiding the extremes of both typical commercial (dull, repetitive, narrow) and typical college (difficult, elitist and irritating) radio, by making the effort to find and broadcast the best and brightest of new music that was inexplicably being ignored by commercial radio, while not forgetting the roots of that music in blues, jazz, pop and other genres of music of the past half century. At the same time, WXYC became a 24 hour a day/ 365 day a year radio station with a commitment to be consistent in quality and reliable enough to set your clock radio to.WXYC won many accolades and awards during the 80’s and 90’s from local as well as national sources, including Rolling Stone Magazine, the New York Times and the Independent Weekly.
+
+In the early 90s, with the advent of the CD, many more international and independent releases became easily available, as well as re-issues of albums that had been impossible to find on vinyl for decades. This enabled WXYC to broaden its programming even more, and to this day the staff of WXYC is committed to seeking out new and interesting sounds from all over the world and presenting them in a coherent, accessible and interesting way.
+
+In 1994, the staff of UNC’s SunSITE, the first Web site in North America, helped [WXYC become the first radio station in the world to stream its on-air signal live over the Internet](https://web.archive.org/web/20200629210334/https://wxyc.org/about/first). We’re proud to have been at the forefront of the Internet radio medium. We now have loyal listeners all over the world who contact us with comments and requests by email and IM.
+
+WXYC alumni include ESPN anchor Stuart Scott, former Squirrel Nut Zipper Tom Maxwell, former Polvo guitarist Dave Brylawski, Newsweek reporter Colin Soloway, film director Peyton Reed, as well as scores of doctors, lawyers, writers, executives, and successful professionals of all kinds.
+
+# Mission
+
+This was originally published in the Summer/Fall 2002 issue of In/Audible, WXYC’s newsletterA word about WXYC’s brand of freeform radio: our mission is to illustrate the relationships between seemingly disparate types of music. We believe that our free-format is the best way to accomplish this mission. Our disc jockeys harness the almighty power of the segue to draw musical linkages across time, culture, and pure sound. For example, you might be humming along to the chorus of your favorite Jay-Z monster, only to hear it followed by the very Bobby “Blue” Bland mega-hit from the ’70s from which the sample was lifted. Or in a more conceptual segue, a cut with a “bedroom vibe” off of jazz trumpeter Dave Douglas’s new disc might successfully follow up a Stevie Wonder slow-jam because they share the same mood. A WXYC segue is a nod to the mutual inspirations that musical creations of dissimilar origins possess. Listen in and see if this author’s conception doesn’t make sense.—Jason Perlmutter, Former Station Manager
