--- a/content/archive/nse-062323.md
+++ b/content/archive/nse-062323.md
@@ -2,6 +2,7 @@
 title: NSE 06/23/23
 cover: /uploads/Screenshot 2023-06-28 at 11.35.13 a.m..png
 categories:
+  - category: content/category/specialty-show.md
   - category: content/category/new-science-experiment.md
 published: 2023-06-23T04:00:00.000Z
 ---
