--- a/content/page/history.mdx
+++ b/content/page/history.mdx
@@ -9,6 +9,8 @@ When WCAR wanted to upgrade in the early 1970s, it decided to pursue an FM licen
 
 The non-profit Student Educational Broadcasting, Inc. was established to serve as the official owner of WXYC’s broadcast license, and in 1977 WCAR became WXYC. The station was originally scheduled to begin broadcasting in January 1977, but winter freezes prevented the installation of an antenna on UNC’s water tower delaying the broadcast until March.
 
+![](/uploads/thumbnail_March-81-Group-Pic.jpeg)
+
 From its earliest days in the late 70s, WXYC has been a leader in diverse and interesting programming, adopting changing forms of popular music long before they became popular in the mainstream without losing touch with the past. This coalesced in 1980 with the decision to achieve a delicate balance, avoiding the extremes of both typical commercial (dull, repetitive, narrow) and typical college (difficult, elitist and irritating) radio, by making the effort to find and broadcast the best and brightest of new music that was inexplicably being ignored by commercial radio, while not forgetting the roots of that music in blues, jazz, pop and other genres of music of the past half century. At the same time, WXYC became a 24 hour a day/ 365 day a year radio station with a commitment to be consistent in quality and reliable enough to set your clock radio to.WXYC won many accolades and awards during the 80’s and 90’s from local as well as national sources, including Rolling Stone Magazine, the New York Times and the Independent Weekly.
 
 In the early 90s, with the advent of the CD, many more international and independent releases became easily available, as well as re-issues of albums that had been impossible to find on vinyl for decades. This enabled WXYC to broaden its programming even more, and to this day the staff of WXYC is committed to seeking out new and interesting sounds from all over the world and presenting them in a coherent, accessible and interesting way.
