--- a/content/page/mission.mdx
+++ b/content/page/mission.mdx
@@ -2,3 +2,5 @@
 # Mission
 
 This was originally published in the Summer/Fall 2002 issue of In/Audible, WXYC’s newsletter. A word about WXYC’s brand of freeform radio: our mission is to illustrate the relationships between seemingly disparate types of music. We believe that our free-format is the best way to accomplish this mission. Our disc jockeys harness the almighty power of the segue to draw musical linkages across time, culture, and pure sound. For example, you might be humming along to the chorus of your favorite Jay-Z monster, only to hear it followed by the very Bobby “Blue” Bland mega-hit from the ’70s from which the sample was lifted. Or in a more conceptual segue, a cut with a “bedroom vibe” off of jazz trumpeter Dave Douglas’s new disc might successfully follow up a Stevie Wonder slow-jam because they share the same mood. A WXYC segue is a nod to the mutual inspirations that musical creations of dissimilar origins possess. Listen in and see if this author’s conception doesn’t make sense.—Jason Perlmutter, Former Station Manager
+
+![](/uploads/127593766_c848d15b6f_o.jpg)
