--- a/content/page/about.mdx
+++ b/content/page/about.mdx
@@ -9,6 +9,8 @@ We celebrated our 40th anniversary in March 2017. We’re proud to be in our fif
 
 [FCC public information for WXYC radio](https://publicfiles.fcc.gov/fm-profile/wxyc/)
 
+![](/uploads/thumbnail_news-2.jpeg)
+
 ### Staff
 
 The station is staffed by approximately 150 UNC students and alumni who perform both on-air DJ shifts and administrative functions. Only current students are hired as DJs, but once hired DJs are permitted to remain on-staff indefinitely. The staff is about two-thirds current students and one-third alumni. [Click here](https://wxyc.org/dj-schedule/) for our current DJ schedule.
