content for demo

--- a/content/page/contact.mdx
+++ b/content/page/contact.mdx
@@ -1,2 +1,16 @@
 
 # Contact
+
+Does your non-profit organization have a community-based event that you would like shared on air? Please contact our Communications Manager for a  brief submission form, so that your message may be shared at our station: psa@wxyc.org
+
+Email music submissions or distribution concerns to: wxycmd@ibiblio.org
+
+For event coordination, promotion, or artist contacts, please email outreach@wxyc.org
+
+For general questions please email info@wxyc.org
+
+Or write us >.\<
+
+WXYC Music Department
+CB #5210, Carolina Union, South Road
+Chapel Hill, NC 27599
