add archive/search links to programming page

--- a/content/page/programming.mdx
+++ b/content/page/programming.mdx
@@ -1,25 +1,31 @@
 
 # Programming
 
-![](/uploads/DJScheduleNoNames.png)
+### Regular Schedule
 
-# Specialty Programing
+Our schedule is currently ad-hoc over the winter break. Check back in January for our Spring semester schedule!
+
+### Programming Archives
+
+[View past shows](http://wxyc.info/playlists/radioWeek)
+
+[Search our airplay records for an artist/song/label](http://wxyc.info/playlists/searchPlaylists)
+
+### Specialty Programing
 
 Tune into some of our specialty shows! New themes every week!
 
-Schedule:
-
-Sundays:
+*Sundays:*
 
 * Orange County Special (OCS): Noon-2PM
 * WXYC Reports: 4-5PM
 * The Sunday Punk Radio (TSPR)/Sunset Soundtrack: Alternating weeks 7-9PM
 
-Thursdays:
+*Thursdays:*
 
 * Thursday Night Feature (TNF): 9PM-Midnight
 
-Fridays:
+*Fridays:*
 
 * Inside Track: 9-10PM
 * New Science Experience (NSE): 10PM-Midnight
