--- a/content/page/programming.mdx
+++ b/content/page/programming.mdx
@@ -3,7 +3,7 @@
 
 ### Regular Schedule
 
-Our schedule is currently ad-hoc over the winter break. Check back in January for our Spring semester schedule!
+![](</uploads/Spring 2024 DJ Schedule.png>)
 
 ### Programming Archives
 
