TinaCMS content update

--- a/content/page/contact.mdx
+++ b/content/page/contact.mdx
@@ -1,9 +1,9 @@
 
 # Contact
 
-Does your non-profit organization have a community-based event that you would like shared on air? Please contact our Communications Manager for a brief submission form, so that your message may be shared at our station: [psa@wxyc.org](mailto\:psa@wxyc.org)
+Does your non-profit organization have a community-based event that you would like shared on air? Please contact our Communications Manager for a brief submission form, so that your message may be shared at our station: [psa@wxdu.org](mailto\:psa@wxyc.org)
 
-Email music submissions or distribution concerns to [md@wxyc.org](mailto\:md@wxyc.org) 
+Email music submissions or distribution concerns to [music@wxdu.org](mailto\:md@wxyc.org)
 
 For event coordination, promotion, or artist contacts, please email [outreach@wxyc.org](mailto\:outreach@wxyc.org)
 
