TinaCMS content update

--- a/content/page/contact.mdx
+++ b/content/page/contact.mdx
@@ -5,7 +5,7 @@ Does your non-profit organization have a community-based event that you would li
 
 Email music submissions or distribution concerns to [music@wxdu.org](mailto\:md@wxyc.org)
 
-For event coordination, promotion, or artist contacts, please email [outreach@wxyc.org](mailto\:outreach@wxyc.org)
+For event coordination, promotion, or artist contacts, please email [promotions@wxdu.org](mailto\:outreach@wxyc.org)
 
 For general questions please email [info@wxyc.org](mailto\:info@wxyc.org)
 
