--- a/content/page/programming.mdx
+++ b/content/page/programming.mdx
@@ -13,17 +13,6 @@
 
 Tune into some of our specialty shows! New themes every week!
 
-Sundays:
+Tuesdays:
 
-* Orange County Special (OCS): Noon-2 PM
-* WXYC Reports: 4-5 PM
-* The Sunday Punk Radio (TSPR)/Sunset Soundtrack: Alternating weeks 7-9 PM
-
-Thursdays:
-
-* Thursday Night Feature (TNF): 9 PM-Midnight
-
-Fridays:
-
-* Inside Track: 9-10 PM
-* New Science Experience (NSE): 10PM-Midnight
+* LOUD: 10pm-midnight
