tests branch protections

--- a/content/page/about.mdx
+++ b/content/page/about.mdx
@@ -21,7 +21,7 @@ WXDU trains new DJs each fall and spring semester. Refer to our [social media](h
 
 ### Structure
 
-WXYC is an officially-recognized student organization of UNC-Chapel Hill. Our license is held by Student Educational Broadcasting Inc. (SEB), a non-profit formed in 1977 to serve as the official owner of the station. SEB was established because the FCC rejected UNC Student Government as the proposed license holder. SEB serves as the station’s board of directors and includes representatives from student government, students at large, the Chapel Hill-Carrboro community, UNC faculty and WXYC staff. The board, which meets monthly, oversees major expenses and overarching station issues. The current chair is Bill Burton, an attorney and former WXYC station manager.
+WXDU is run by volunteers and operates by consensus.
 
 The station’s day-to-day operations are managed by a station manager and business manager that are elected by SEB each April. The business manager is required to be a current UNC student; although the station manager position does not have the same requirement, the station manager is nonetheless almost always a student.
 
