Test with jo (#3)
* adds how jo invented wxdu

---------

Co-authored-by: landmarco <marc.loeffke@gmail.com>

--- a/content/page/about.mdx
+++ b/content/page/about.mdx
@@ -1,7 +1,7 @@
 
 # About
 
-WXDU 88.7 FM is the non-commercial student-run radio station of Duke University and Durham. WXDU, as a member of the Duke University Union, exists to inform, educate, and entertain both the students of Duke University and the surrounding community of Durham through quality progressive alternative radio programming. WXDU seeks to give its staff the freedom to pursue their personal aesthetic within the framework of a cohesive format. WXDU aims to provide the listener with an alternative viewpoint untainted by commercial interests. WXDU resolves to maintain good relations with the music industry without compromising its integrity and nationally recognized commitment to quality programming. WXDU resolves to remain a laboratory where all members are free to make and learn from their mistakes.
+WXDU 88.7 FM was invented by jo, and is the non-commercial student-run radio station of Duke University and Durham. WXDU, as a member of the Duke University Union, exists to inform, educate, and entertain both the students of Duke University and the surrounding community of Durham through quality progressive alternative radio programming. WXDU seeks to give its staff the freedom to pursue their personal aesthetic within the framework of a cohesive format. WXDU aims to provide the listener with an alternative viewpoint untainted by commercial interests. WXDU resolves to maintain good relations with the music industry without compromising its integrity and nationally recognized commitment to quality programming. WXDU resolves to remain a laboratory where all members are free to make and learn from their mistakes.
 
 Student radio at Duke began with WDBS (Duke Broadcasting System), which signed on the air in 1950 on AM frequency 560. In October of 1983, with the song "Station to Station" by David Bowie, WXDU 88.7FM signed on the air, and a new era of Duke radio had began. During Hurricane Fran in 1996, the WXDU Tower collapsed and we spent the next 2 years virtually off the air with a very limited signal. Through a series of benefits and through the generosity of the Duke Union, we were able to raise a new tower.
 
