--- a/content/page/about.mdx
+++ b/content/page/about.mdx
@@ -13,7 +13,7 @@ In its 75 years of operation, what is now WXDU has gone through many transmutati
 
 ![](/uploads/thumbnail_news-2.jpeg)
 
-### Staff
+### Stafff
 
 The station is staffed by approximately 150 Duke students and community members who perform both on-air DJ shifts and administrative functions. [Click here ](https://wxyc.org/programming)for our current DJ schedule.
 
