Restore /about/first page (First Internet Simulcast)
Restores the historic page documenting WXYC's groundbreaking 1994 internet
simulcast - the first radio station in the world to stream live on the internet.

- Add first.mdx content with updated copy reflecting 30+ years of streaming
- Add dedicated first.js page with custom image styling
- Add About dropdown to navigation (desktop and mobile)
- Update AboutLayout sidebar to include First Simulcast link
- Include restored Jeopardy screenshot and Bandwidth album cover images
- Update history.mdx to link to restored page instead of Wayback Machine

--- a/content/page/history.mdx
+++ b/content/page/history.mdx
@@ -15,6 +15,6 @@ From its earliest days in the late 70s, WXYC has been a leader in diverse and in
 
 In the early 90s, with the advent of the CD, many more international and independent releases became easily available, as well as re-issues of albums that had been impossible to find on vinyl for decades. This enabled WXYC to broaden its programming even more, and to this day the staff of WXYC is committed to seeking out new and interesting sounds from all over the world and presenting them in a coherent, accessible and interesting way.
 
-In 1994, the staff of UNC’s SunSITE, the first Web site in North America, helped [WXYC become the first radio station in the world to stream its on-air signal live over the Internet](https://web.archive.org/web/20200629210334/https://wxyc.org/about/first). We’re proud to have been at the forefront of the Internet radio medium. We now have loyal listeners all over the world who contact us with comments and requests by email and IM.
+In 1994, the staff of UNC’s SunSITE, the first Web site in North America, helped [WXYC become the first radio station in the world to stream its on-air signal live over the Internet](/about/first). We’re proud to have been at the forefront of the Internet radio medium. We now have loyal listeners all over the world who contact us with comments and requests by email and IM.
 
 WXYC alumni include ESPN anchor Stuart Scott, former Squirrel Nut Zipper Tom Maxwell, former Polvo guitarist Dave Brylawski, Newsweek reporter Colin Soloway, film director Peyton Reed, as well as scores of doctors, lawyers, writers, executives, and successful professionals of all kinds.
